# ExamApp-cmake

./: .gitignore  CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/includes/App/: Application.hpp  FileManager.hpp  LibraryApp.hpp  Log.hpp  MassiveEditor.hpp
lib/src/App/: Application.cpp  FileManager.cpp  LibraryApp.cpp  MassiveEditor.cpp
